--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -10,3 +10,10 @@ nav li {
 footer {
 	text-align: center;
 }
+
+.container_wrapper {
+	width: 960px;
+	margin: 0 auto;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
