--- a/src/main/resources/static/stylesheets/hover.css
+++ b/src/main/resources/static/stylesheets/hover.css
@@ -1,4 +1,4 @@
-/*!
+﻿/*!
  * Hover.css (http://ianlunn.github.io/Hover/)
  * Version: 2.0.2
  * Author: Ian Lunn @IanLunn
@@ -1441,7 +1441,7 @@
 
 /* Sweep To Right */
 .hvr-sweep-to-right {
-  display: inline-block;
+  /*display: inline-block;*/
   vertical-align: middle;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
@@ -1452,8 +1452,8 @@
   position: relative;
   -webkit-transition-property: color;
   transition-property: color;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.6s;
+  transition-duration: 0.6s;
 }
 .hvr-sweep-to-right:before {
   content: "";
@@ -1470,8 +1470,8 @@
   transform-origin: 0 50%;
   -webkit-transition-property: transform;
   transition-property: transform;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.6s;
+  transition-duration: 0.6s;
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 }
